community/lists/devel/att-16948/attachment
<div dir="ltr"><div>My feeling is that the current patch hide the symptoms without addressing the real issue.</div><div><br></div>As a side note: The compiler incriminated in this thread, works perfectly for 128 bits atomic operations in other projects where I use atomic LIFO &amp; FIFO (but not the one from OMPI as I already raised my concerns about this).<div><br></div><div>  George.</div><div><br></div><div>PS: Why are there totally non-related comments about FIFO in the opal_lifo.h (starting line 61)?</div></div><div class="gmail_extra"><br><div class="gmail_quote">On Wed, Feb 4, 2015 at 11:30 PM, Gilles Gouaillardet <span dir="ltr">&lt;<a href="mailto:gilles.gouaillardet@iferc.org" target="_blank">gilles.gouaillardet@iferc.org</a>&gt;</span> wrote:<br><blockquote class="gmail_quote" style="margin:0 0 0 .8ex;border-left:1px #ccc solid;padding-left:1ex">
  
    
  
  <div text="#000000" bgcolor="#FFFFFF">
    <div>Paul and all,<br>
      <br>
      i just pushed
<a href="https://github.com/open-mpi/ompi/commit/b42e3441294e9fe787fe8e9ad7403d5b8e465163" target="_blank">https://github.com/open-mpi/ompi/commit/b42e3441294e9fe787fe8e9ad7403d5b8e465163</a><br>
      <br>
      when a buggy compiler is detected, configure now forces
      OPAL_HAVE_CMPXCHG16B=0<br>
      this is enough to make opal_lifo test and make check happy again.<br>
      <br>
      Cheers,<br>
      <br>
      Gilles<div><div class="h5"><br>
      <br>
      On 2015/02/04 17:26, Gilles Gouaillardet wrote:<br>
    </div></div></div>
    <blockquote type="cite"><div><div class="h5">
      <pre>Paul,

my previous email was misleading.

what i really meant is the opal_fifo test works fine with icc 2013u5
(the release before 2013sp1) and
icc 2013sp1u2 and later

so even if the reproducer fails with icc older that 2013sp1u2, that
might not impact ompi
since for other reasons, the bug is not hit

for example, with icc 2013u5, OPAL_HAVE_CMPXCHG16B=0 so ompi stays away
from the compiler bug.

Cheers,

Gilles

On 2015/02/04 17:15, Paul Hargrove wrote:
</pre>
      <blockquote type="cite">
        <pre>Giles,

Who says only 2 version are effected?

I have access to 9 revisions of icc.
Using your reduced case I find 7 that fail and only 2 (the latest two) that
pass.
Discounting icc-12 (which can&#39;t compile the test) that makes 6 versions
effected by the bug (not 2).

-Paul

$ for x in 12.1.5.339 13.0.0.079 13.0.1.117 13.1.2.183 13.1.3.192
14.0.0.080 14.0.1.106 14.0.2.144 15.0.1.133; do module swap intel intel/$x
; echo @ Testing Intel compiler version $x; icc conftest.c &amp;&amp; ./a.out &amp;&amp;
echo PASS ; done
@ Testing Intel compiler version 12.1.5.339
conftest.c(10): error: identifier &quot;__int128_t&quot; is undefined
      __int128_t value;
      ^

compilation aborted for conftest.c (code 2)
@ Testing Intel compiler version 13.0.0.079
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 13.0.1.117
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 13.1.2.183
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 13.1.3.192
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 14.0.0.080
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 14.0.1.106
a.out: conftest.c:36: main: Assertion `a.value == b.value&#39; failed.
Aborted
@ Testing Intel compiler version 14.0.2.144
PASS
@ Testing Intel compiler version 15.0.1.133
PASS

On Tue, Feb 3, 2015 at 11:45 PM, Gilles Gouaillardet &lt;
<a href="mailto:gilles.gouaillardet@iferc.org" target="_blank">gilles.gouaillardet@iferc.org</a>&gt; wrote:

</pre>
        <blockquote type="cite">
          <pre> Nathan,

imho, this is a compiler bug and only two versions are affected :
- intel icc 14.0.0.080 (aka 2013sp1)
- intel icc 14.0.1.106 (aka 2013sp1u1)
/* note the bug only occurs with -O1 and higher optimization levels */

here is attached a simple reproducer

a simple workaround is to configure with ac_cv_type___int128=0

Cheers,

Gilles

On 2015/02/04 4:17, Nathan Hjelm wrote:

Thats the second report involving icc 14. I will dig into this later
this week.

-Nathan

On Mon, Feb 02, 2015 at 11:03:41PM -0800, Paul Hargrove wrote:

    I have seen opal_fifo hang on 2 distinct systems
    + Linux/ppc32 with xlc-11.1
    + Linux/x86-64 with icc-14.0.1.106
   I have no explanation to offer for either hang.
   No &quot;weird&quot; configure options were passed to either.
   -Paul
   --
   Paul H. Hargrove                          <a href="mailto:PHHargrove@lbl.gov" target="_blank">PHHargrove@lbl.gov</a>
   Computer Languages &amp; Systems Software (CLaSS) Group
   Computer Science Department               Tel: <a href="tel:%2B1-510-495-2352" value="+15104952352" target="_blank">+1-510-495-2352</a>
   Lawrence Berkeley National Laboratory     Fax: <a href="tel:%2B1-510-486-6900" value="+15104866900" target="_blank">+1-510-486-6900</a>

  _______________________________________________
devel mailing <a href="mailto:listdevel@open-mpi.org" target="_blank">listdevel@open-mpi.org</a>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a>
Link to this post: <a href="http://www.open-mpi.org/community/lists/devel/2015/02/16911.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16911.php</a>



_______________________________________________
devel mailing <a href="mailto:listdevel@open-mpi.org" target="_blank">listdevel@open-mpi.org</a>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a>
Link to this post: <a href="http://www.open-mpi.org/community/lists/devel/2015/02/16920.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16920.php</a>



_______________________________________________
devel mailing list
<a href="mailto:devel@open-mpi.org" target="_blank">devel@open-mpi.org</a>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a>
Link to this post:
<a href="http://www.open-mpi.org/community/lists/devel/2015/02/16921.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16921.php</a>

</pre>
        </blockquote>
        <pre>


_______________________________________________
devel mailing list
<a href="mailto:devel@open-mpi.org" target="_blank">devel@open-mpi.org</a>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a>
Link to this post: <a href="http://www.open-mpi.org/community/lists/devel/2015/02/16922.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16922.php</a>
</pre>
      </blockquote>
      <pre>
</pre>
      <br>
      <fieldset></fieldset>
      <br>
      </div></div><pre><div><div class="h5">_______________________________________________
devel mailing list
<a href="mailto:devel@open-mpi.org" target="_blank">devel@open-mpi.org</a>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a></div></div>
Link to this post: <a href="http://www.open-mpi.org/community/lists/devel/2015/02/16923.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16923.php</a></pre>
    </blockquote>
    <br>
  </div>

<br>_______________________________________________<br>
devel mailing list<br>
<a href="mailto:devel@open-mpi.org">devel@open-mpi.org</a><br>
Subscription: <a href="http://www.open-mpi.org/mailman/listinfo.cgi/devel" target="_blank">http://www.open-mpi.org/mailman/listinfo.cgi/devel</a><br>
Link to this post: <a href="http://www.open-mpi.org/community/lists/devel/2015/02/16926.php" target="_blank">http://www.open-mpi.org/community/lists/devel/2015/02/16926.php</a><br></blockquote></div><br></div>

